tools/kate_parser.output
Terminals unused in grammar

   BASE


Grammar

    0 $accept: kd_kate $end

    1 $@1: /* empty */

    2 $@2: /* empty */

    3 kd_kate: $@1 KATE '{' kd_opt_defs $@2 kd_events '}'

    4 kd_opt_defs: DEFS '{' kd_defs '}'
    5            | /* empty */

    6 kd_defs: kd_defs kd_def
    7        | /* empty */

    8 kd_def: LANGUAGE STRING
    9       | CATEGORY STRING
   10       | DIRECTIONALITY directionality
   11       | COMMENT STRING

   12 $@3: /* empty */

   13 $@4: /* empty */

   14 kd_def: DEFINE MACRO $@3 IDENTIFIER $@4 MACRO_BODY

   15 $@5: /* empty */

   16 kd_def: DEFINE STYLE kd_opt_name $@5 '{' kd_style_defs '}'

   17 $@6: /* empty */

   18 kd_def: DEFINE REGION kd_opt_name $@6 '{' kd_region_defs '}'

   19 $@7: /* empty */

   20 kd_def: DEFINE CURVE kd_opt_name $@7 '{' kd_curve_defs '}'

   21 $@8: /* empty */

   22 kd_def: DEFINE MOTION kd_opt_name $@8 '{' kd_motion_defs '}'

   23 $@9: /* empty */

   24 kd_def: DEFINE PALETTE kd_opt_name $@9 '{' kd_palette_defs '}'

   25 $@10: /* empty */

   26 kd_def: DEFINE BITMAP kd_opt_name $@10 '{' kd_bitmap_defs '}'

   27 $@11: /* empty */

   28 kd_def: DEFINE FONT RANGE kd_opt_name $@11 '{' kd_font_range_defs '}'

   29 $@12: /* empty */

   30 kd_def: DEFINE FONT MAPPING kd_opt_name $@12 '{' kd_font_mapping_defs '}'
   31       | TIMEBASE timespec
   32       | GRANULE RATE UNUMBER '/' UNUMBER
   33       | GRANULE SHIFT UNUMBER
   34       | CANVAS SIZE UNUMBER UNUMBER

   35 kd_style_defs: kd_style_defs kd_style_def
   36              | /* empty */

   37 kd_style_def: HALIGN float
   38             | VALIGN float
   39             | HLEFT
   40             | HCENTER
   41             | HRIGHT
   42             | VTOP
   43             | VCENTER
   44             | VBOTTOM
   45             | TEXT COLOR kd_color
   46             | BACKGROUND COLOR kd_color
   47             | DRAW COLOR kd_color
   48             | BOLD
   49             | ITALICS
   50             | UNDERLINE
   51             | STRIKE
   52             | JUSTIFY
   53             | WRAP kd_wrap_mode
   54             | FONT STRING
   55             | FONT SIZE float kd_opt_space_metric
   56             | FONT WIDTH float kd_opt_space_metric
   57             | FONT HEIGHT float kd_opt_space_metric
   58             | LEFT MARGIN float kd_opt_space_metric
   59             | TOP MARGIN float kd_opt_space_metric
   60             | RIGHT MARGIN float kd_opt_space_metric
   61             | BOTTOM MARGIN float kd_opt_space_metric
   62             | MARGINS float kd_opt_space_metric float kd_opt_space_metric float kd_opt_space_metric float kd_opt_space_metric
   63             | META STRING '=' STRING

   64 $@13: /* empty */

   65 kd_style_def: META STRING '=' UNUMBER $@13 '{' kd_byte_stream '}'

   66 kd_opt_space_metric: '%'
   67                    | 'm'
   68                    | /* empty */

   69 kd_region_defs: kd_region_defs kd_region_def
   70               | /* empty */

   71 kd_region_def: METRIC
   72              | POSITION float float
   73              | SIZE float float
   74              | CLIP
   75              | DEFAULT STYLE kd_style_name_or_index
   76              | META STRING '=' STRING

   77 $@14: /* empty */

   78 kd_region_def: META STRING '=' UNUMBER $@14 '{' kd_byte_stream '}'

   79 kd_curve_defs: kd_curve_defs kd_curve_def
   80              | /* empty */

   81 kd_curve_def: kd_curvetype

   82 $@15: /* empty */

   83 kd_curve_def: UNUMBER POINTS $@15 '{' kd_curve_points '}'

   84 $@16: /* empty */

   85 kd_curve_def: POINTS $@16 '{' kd_curve_points '}'

   86 kd_palette_defs: kd_palette_defs kd_palette_def
   87                | /* empty */

   88 $@17: /* empty */

   89 kd_palette_def: UNUMBER COLORS $@17 '{' kd_palette_colors '}'
   90               | SOURCE STRING

   91 kd_bitmap_defs: kd_bitmap_defs kd_bitmap_def
   92               | /* empty */

   93 $@18: /* empty */

   94 kd_bitmap_def: UNUMBER 'x' UNUMBER 'x' UNUMBER $@18 '{' kd_bitmap_pixels '}'

   95 $@19: /* empty */

   96 kd_bitmap_def: UNUMBER 'x' UNUMBER PNG UNUMBER $@19 '{' kd_png_bitmap_pixels '}'
   97              | SOURCE STRING
   98              | DEFAULT PALETTE kd_palette_name_or_index
   99              | OFFSET bitmap_x_offset bitmap_y_offset
  100              | META STRING '=' STRING

  101 $@20: /* empty */

  102 kd_bitmap_def: META STRING '=' UNUMBER $@20 '{' kd_byte_stream '}'

  103 kd_color: UNUMBER UNUMBER UNUMBER
  104         | UNUMBER UNUMBER UNUMBER UNUMBER
  105         | COLORSPEC
  106         | COLORSPEC ALPHA UNUMBER

  107 kd_wrap_mode: NONE
  108             | WORD

  109 kd_curvetype: NONE
  110             | STATIC
  111             | LINEAR
  112             | CATMULL_ROM
  113             | BEZIER_CUBIC
  114             | BSPLINE

  115 kd_curve_points: kd_curve_points float
  116                | /* empty */

  117 kd_palette_colors: kd_palette_colors '{' kd_color '}' kd_opt_comma
  118                  | /* empty */

  119 kd_bitmap_pixels: kd_bitmap_pixels UNUMBER kd_opt_comma
  120                 | /* empty */

  121 kd_png_bitmap_pixels: kd_png_bitmap_pixels UNUMBER kd_opt_comma
  122                     | /* empty */

  123 kd_byte_stream: kd_byte_stream UNUMBER kd_opt_comma
  124               | /* empty */

  125 kd_opt_name: STRING
  126            | /* empty */

  127 kd_style_name_or_index: STRING
  128                       | UNUMBER

  129 kd_region_name_or_index: STRING
  130                        | UNUMBER

  131 kd_curve_name_or_index: STRING
  132                       | UNUMBER

  133 kd_motion_name_or_index: STRING
  134                        | UNUMBER

  135 kd_palette_name_or_index: STRING
  136                         | UNUMBER

  137 kd_bitmap_name_or_index: STRING
  138                        | UNUMBER

  139 kd_font_range_name_or_index: STRING
  140                            | UNUMBER

  141 kd_font_mapping_name_or_index: STRING
  142                              | UNUMBER

  143 kd_curve_def_name_or_index: kd_curve_name_or_index

  144 $@21: /* empty */

  145 kd_curve_def_name_or_index: $@21 '{' kd_curve_defs '}'

  146 $@22: /* empty */

  147 kd_curve_def_name_or_index: kd_curve_name_or_index $@22 '{' kd_curve_defs '}'

  148 float: FLOAT
  149      | UNUMBER
  150      | NUMBER

  151 bitmap_x_offset: UNUMBER
  152                | NUMBER
  153                | float '%'

  154 bitmap_y_offset: UNUMBER
  155                | NUMBER
  156                | float '%'

  157 timespec: UNUMBER ':' unumber60 ':' float60
  158         | UNUMBER ':' float60
  159         | float60

  160 kd_events: kd_events kd_event
  161          | /* empty */

  162 $@23: /* empty */

  163 kd_event: EVENT $@23 '{' kd_event_defs '}'

  164 $@24: /* empty */

  165 kd_event: EVENT $@24 kd_event_defs

  166 kd_event_defs: kd_event_defs kd_event_def
  167              | /* empty */

  168 kd_event_def: ID UNUMBER
  169             | LANGUAGE STRING
  170             | DIRECTIONALITY directionality
  171             | STARTS AT timespec
  172             | ENDS AT timespec
  173             | START TIME timespec
  174             | END TIME timespec
  175             | FROM timespec TO timespec
  176             | DURATION timespec
  177             | FROM timespec FOR timespec
  178             | timespec ARROW timespec
  179             | REGION kd_region_name_or_index

  180 $@25: /* empty */

  181 kd_event_def: REGION kd_region_name_or_index $@25 '{' kd_region_defs '}'

  182 $@26: /* empty */

  183 kd_event_def: REGION $@26 '{' kd_region_defs '}'
  184             | kd_optional_secondary STYLE kd_style_name_or_index

  185 $@27: /* empty */

  186 kd_event_def: kd_optional_secondary STYLE kd_style_name_or_index $@27 '{' kd_style_defs '}'

  187 $@28: /* empty */

  188 kd_event_def: kd_optional_secondary STYLE $@28 '{' kd_style_defs '}'
  189             | TEXT strings
  190             | PRE TEXT strings
  191             | MARKUP strings
  192             | PRE MARKUP strings
  193             | TEXT SOURCE STRING
  194             | PRE TEXT SOURCE STRING
  195             | MARKUP SOURCE STRING
  196             | PRE MARKUP SOURCE STRING
  197             | strings

  198 $@29: /* empty */

  199 kd_event_def: MOTION $@29 '{' kd_motion_defs '}'
  200             | MOTION kd_motion_name_or_index

  201 $@30: /* empty */

  202 kd_event_def: SIMPLE_TIMED_GLYPH_MARKER $@30 '{' kd_simple_timed_glyph_marker_defs '}'

  203 $@31: /* empty */

  204 kd_event_def: SIMPLE_TIMED_GLYPH_STYLE_MORPH $@31 '{' kd_simple_timed_glyph_style_morph_defs '}'
  205             | FONT MAPPING kd_font_mapping_name_or_index
  206             | PALETTE kd_palette_name_or_index

  207 $@32: /* empty */

  208 kd_event_def: PALETTE $@32 '{' kd_palette_defs '}'
  209             | BITMAP kd_bitmap_name_or_index

  210 $@33: /* empty */

  211 kd_event_def: BITMAP $@33 '{' kd_bitmap_defs '}'

  212 $@34: /* empty */

  213 kd_event_def: DEFINE LOCAL BITMAP kd_opt_name $@34 '{' kd_bitmap_defs '}'
  214             | DEFINE LOCAL BITMAP kd_opt_name '=' kd_bitmap_name_or_index
  215             | META STRING '=' STRING
  216             | META STRING '=' kd_meta_byte_stream_def

  217 $@35: /* empty */

  218 kd_meta_byte_stream_def: UNUMBER $@35 '{' kd_byte_stream '}'

  219 kd_optional_secondary: SECONDARY
  220                      | /* empty */

  221 strings: strings '+' STRING
  222        | STRING

  223 kd_motion_defs: kd_motion_defs kd_motion_def
  224               | /* empty */

  225 kd_motion_def: MAPPING kd_motion_mapping
  226              | MAPPING kd_motion_mapping kd_motion_mapping
  227              | SEMANTICS kd_motion_semantics
  228              | CURVE kd_curve_def_name_or_index kd_optional_curve_duration
  229              | PERIODIC

  230 kd_optional_curve_duration: FOR float
  231                           | FOR float '%'
  232                           | FOR float 'm'
  233                           | /* empty */

  234 kd_motion_mapping: NONE
  235                  | FRAME
  236                  | REGION
  237                  | EVENT DURATION
  238                  | BITMAP SIZE
  239                  | USER UNUMBER

  240 kd_motion_semantics: TIME
  241                    | REGION POSITION
  242                    | REGION SIZE
  243                    | TEXT ALIGNMENT
  244                    | INTERNAL TEXT ALIGNMENT
  245                    | EXTERNAL TEXT ALIGNMENT
  246                    | TEXT POSITION
  247                    | TEXT SIZE
  248                    | MARKER UNUMBER POSITION
  249                    | GLYPH POINTER UNUMBER
  250                    | TEXT COLOR RG
  251                    | TEXT COLOR BA
  252                    | BACKGROUND COLOR RG
  253                    | BACKGROUND COLOR BA
  254                    | DRAW COLOR RG
  255                    | DRAW COLOR BA
  256                    | STYLE MORPH
  257                    | TEXT PATH
  258                    | TEXT PATH SECTION
  259                    | DRAW
  260                    | VISIBLE SECTION
  261                    | 'z'
  262                    | HORIZONTAL MARGINS
  263                    | VERTICAL MARGINS
  264                    | BITMAP POSITION
  265                    | BITMAP SIZE
  266                    | MARKER UNUMBER BITMAP
  267                    | GLYPH POINTER UNUMBER BITMAP
  268                    | DRAW WIDTH
  269                    | USER UNUMBER

  270 kd_simple_timed_glyph_marker_defs: kd_simple_timed_glyph_marker_defs kd_simple_timed_glyph_marker_def
  271                                  | /* empty */

  272 kd_simple_timed_glyph_marker_def: GLYPH POINTER UNUMBER
  273                                 | 'Y' MAPPING kd_motion_mapping
  274                                 | HEIGHT FROM float TO float
  275                                 | PAUSE FOR timespec
  276                                 | GLYPH UNUMBER IN timespec
  277                                 | GLYPH UNUMBER AT timespec

  278 kd_simple_timed_glyph_style_morph_defs: kd_simple_timed_glyph_style_morph_defs kd_simple_timed_glyph_style_morph_def
  279                                       | /* empty */

  280 kd_simple_timed_glyph_style_morph_def: GLYPH POINTER UNUMBER
  281                                      | FROM STYLE kd_style_name_or_index TO STYLE kd_style_name_or_index
  282                                      | PAUSE FOR timespec
  283                                      | GLYPH UNUMBER IN timespec
  284                                      | GLYPH UNUMBER AT timespec
  285                                      | STRING IN timespec
  286                                      | STRING AT timespec

  287 $@36: /* empty */

  288 unumber60: UNUMBER $@36

  289 $@37: /* empty */

  290 float60: float $@37

  291 kd_opt_comma: ','
  292             | /* empty */

  293 directionality: L2R_T2B
  294               | R2L_T2B
  295               | T2B_R2L
  296               | T2B_L2R

  297 kd_font_range_defs: kd_font_range_defs kd_font_range_def
  298                   | /* empty */

  299 kd_font_range_def: FIRST CODE POINT STRING
  300                  | FIRST CODE POINT UNUMBER
  301                  | LAST CODE POINT STRING
  302                  | LAST CODE POINT UNUMBER
  303                  | FIRST BITMAP kd_bitmap_name_or_index

  304 kd_font_mapping_defs: kd_font_mapping_defs kd_font_mapping_def
  305                     | /* empty */

  306 $@38: /* empty */

  307 kd_font_mapping_def: RANGE $@38 '{' kd_font_range_defs '}'
  308                    | RANGE kd_font_range_name_or_index


Terminals, with rules where they appear

$end (0) 0
'%' (37) 66 153 156 231
'+' (43) 221
',' (44) 291
'/' (47) 32
':' (58) 157 158
'=' (61) 63 65 76 78 100 102 214 215 216
'Y' (89) 273
'm' (109) 67 232
'x' (120) 94 96
'z' (122) 261
'{' (123) 3 4 16 18 20 22 24 26 28 30 65 78 83 85 89 94 96 102 117
    145 147 163 181 183 186 188 199 202 204 208 211 213 218 307
'}' (125) 3 4 16 18 20 22 24 26 28 30 65 78 83 85 89 94 96 102 117
    145 147 163 181 183 186 188 199 202 204 208 211 213 218 307
error (256)
KATE (258) 3
DEFS (259) 4
LANGUAGE (260) 8 169
COMMENT (261) 11
CATEGORY (262) 9
DEFINE (263) 14 16 18 20 22 24 26 28 30 213 214
MACRO (264) 14
STYLE (265) 16 75 184 186 188 256 281
REGION (266) 18 179 181 183 236 241 242
CURVE (267) 20 228
TEXT (268) 45 189 190 193 194 243 244 245 246 247 250 251 257 258
BACKGROUND (269) 46 252 253
COLOR (270) 45 46 47 250 251 252 253 254 255
POSITION (271) 72 241 246 248 264
SIZE (272) 34 55 73 238 242 247 265
DEFAULT (273) 75 98
METRIC (274) 71
HALIGN (275) 37
VALIGN (276) 38
HLEFT (277) 39
HCENTER (278) 40
HRIGHT (279) 41
VTOP (280) 42
VCENTER (281) 43
VBOTTOM (282) 44
POINTS (283) 83 85
EVENT (284) 163 165 237
STARTS (285) 171
ENDS (286) 172
AT (287) 171 172 277 284 286
START (288) 173
END (289) 174
TIME (290) 173 174 240
DURATION (291) 176 237
ARROW (292) 178
FROM (293) 175 177 274 281
TO (294) 175 274 281
MAPPING (295) 30 205 225 226 273
NONE (296) 107 109 234
FRAME (297) 235
MOTION (298) 22 199 200
BEZIER_CUBIC (299) 113
LINEAR (300) 111
CATMULL_ROM (301) 112
BSPLINE (302) 114
STATIC (303) 110
SEMANTICS (304) 227
EXTERNAL (305) 245
INTERNAL (306) 244
ALIGNMENT (307) 243 244 245
RG (308) 250 252 254
BA (309) 251 253 255
FOR (310) 177 230 231 232 275 282
ALPHA (311) 106
TIMEBASE (312) 31
MARKER (313) 248 266
POINTER (314) 249 267 272 280
SIMPLE_TIMED_GLYPH_MARKER (315) 202
SIMPLE_TIMED_GLYPH_STYLE_MORPH (316) 204
GLYPH (317) 249 267 272 276 277 280 283 284
PAUSE (318) 275 282
IN (319) 276 283 285
MORPH (320) 256
SECONDARY (321) 219
PATH (322) 257 258
SECTION (323) 258 260
PERIODIC (324) 229
DIRECTIONALITY (325) 10 170
L2R_T2B (326) 293
R2L_T2B (327) 294
T2B_R2L (328) 295
T2B_L2R (329) 296
BITMAP (330) 26 209 211 213 214 238 264 265 266 267 303
PALETTE (331) 24 98 206 208
COLORS (332) 89
FONT (333) 28 30 54 55 56 57 205
RANGE (334) 28 307 308
FIRST (335) 299 300 303
LAST (336) 301 302
CODE (337) 299 300 301 302
POINT (338) 299 300 301 302
USER (339) 239 269
SOURCE (340) 90 97 193 194 195 196
PNG (341) 96
DRAW (342) 47 254 255 259 268
VISIBLE (343) 260
ID (344) 168
BOLD (345) 48
ITALICS (346) 49
UNDERLINE (347) 50
STRIKE (348) 51
JUSTIFY (349) 52
BASE (350)
OFFSET (351) 99
GRANULE (352) 32 33
RATE (353) 32
SHIFT (354) 33
WIDTH (355) 56 268
HEIGHT (356) 57 274
CANVAS (357) 34
LEFT (358) 58
TOP (359) 59
RIGHT (360) 60
BOTTOM (361) 61
MARGIN (362) 58 59 60 61
MARGINS (363) 62 262 263
HORIZONTAL (364) 262
VERTICAL (365) 263
CLIP (366) 74
PRE (367) 190 192 194 196
MARKUP (368) 191 192 195 196
LOCAL (369) 213 214
WRAP (370) 53
WORD (371) 108
META (372) 63 65 76 78 100 102 215 216
NUMBER (373) 150 152 155
UNUMBER (374) 32 33 34 65 78 83 89 94 96 102 103 104 106 119 121 123
    128 130 132 134 136 138 140 142 149 151 154 157 158 168 218 239
    248 249 266 267 269 272 276 277 280 283 284 288 300 302
STRING (375) 8 9 11 54 63 65 76 78 90 97 100 102 125 127 129 131 133
    135 137 139 141 169 193 194 195 196 215 216 221 222 285 286 299
    301
FLOAT (376) 148
COLORSPEC (377) 105 106
IDENTIFIER (378) 14
MACRO_BODY (379) 14


Nonterminals, with rules where they appear

$accept (137)
    on left: 0
kd_kate (138)
    on left: 3, on right: 0
$@1 (139)
    on left: 1, on right: 3
$@2 (140)
    on left: 2, on right: 3
kd_opt_defs (141)
    on left: 4 5, on right: 3
kd_defs (142)
    on left: 6 7, on right: 4 6
kd_def (143)
    on left: 8 9 10 11 14 16 18 20 22 24 26 28 30 31 32 33 34, on right:
    6
$@3 (144)
    on left: 12, on right: 14
$@4 (145)
    on left: 13, on right: 14
$@5 (146)
    on left: 15, on right: 16
$@6 (147)
    on left: 17, on right: 18
$@7 (148)
    on left: 19, on right: 20
$@8 (149)
    on left: 21, on right: 22
$@9 (150)
    on left: 23, on right: 24
$@10 (151)
    on left: 25, on right: 26
$@11 (152)
    on left: 27, on right: 28
$@12 (153)
    on left: 29, on right: 30
kd_style_defs (154)
    on left: 35 36, on right: 16 35 186 188
kd_style_def (155)
    on left: 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54
    55 56 57 58 59 60 61 62 63 65, on right: 35
$@13 (156)
    on left: 64, on right: 65
kd_opt_space_metric (157)
    on left: 66 67 68, on right: 55 56 57 58 59 60 61 62
kd_region_defs (158)
    on left: 69 70, on right: 18 69 181 183
kd_region_def (159)
    on left: 71 72 73 74 75 76 78, on right: 69
$@14 (160)
    on left: 77, on right: 78
kd_curve_defs (161)
    on left: 79 80, on right: 20 79 145 147
kd_curve_def (162)
    on left: 81 83 85, on right: 79
$@15 (163)
    on left: 82, on right: 83
$@16 (164)
    on left: 84, on right: 85
kd_palette_defs (165)
    on left: 86 87, on right: 24 86 208
kd_palette_def (166)
    on left: 89 90, on right: 86
$@17 (167)
    on left: 88, on right: 89
kd_bitmap_defs (168)
    on left: 91 92, on right: 26 91 211 213
kd_bitmap_def (169)
    on left: 94 96 97 98 99 100 102, on right: 91
$@18 (170)
    on left: 93, on right: 94
$@19 (171)
    on left: 95, on right: 96
$@20 (172)
    on left: 101, on right: 102
kd_color (173)
    on left: 103 104 105 106, on right: 45 46 47 117
kd_wrap_mode (174)
    on left: 107 108, on right: 53
kd_curvetype (175)
    on left: 109 110 111 112 113 114, on right: 81
kd_curve_points (176)
    on left: 115 116, on right: 83 85 115
kd_palette_colors (177)
    on left: 117 118, on right: 89 117
kd_bitmap_pixels (178)
    on left: 119 120, on right: 94 119
kd_png_bitmap_pixels (179)
    on left: 121 122, on right: 96 121
kd_byte_stream (180)
    on left: 123 124, on right: 65 78 102 123 218
kd_opt_name (181)
    on left: 125 126, on right: 16 18 20 22 24 26 28 30 213 214
kd_style_name_or_index (182)
    on left: 127 128, on right: 75 184 186 281
kd_region_name_or_index (183)
    on left: 129 130, on right: 179 181
kd_curve_name_or_index (184)
    on left: 131 132, on right: 143 147
kd_motion_name_or_index (185)
    on left: 133 134, on right: 200
kd_palette_name_or_index (186)
    on left: 135 136, on right: 98 206
kd_bitmap_name_or_index (187)
    on left: 137 138, on right: 209 214 303
kd_font_range_name_or_index (188)
    on left: 139 140, on right: 308
kd_font_mapping_name_or_index (189)
    on left: 141 142, on right: 205
kd_curve_def_name_or_index (190)
    on left: 143 145 147, on right: 228
$@21 (191)
    on left: 144, on right: 145
$@22 (192)
    on left: 146, on right: 147
float (193)
    on left: 148 149 150, on right: 37 38 55 56 57 58 59 60 61 62 72
    73 115 153 156 230 231 232 274 290
bitmap_x_offset (194)
    on left: 151 152 153, on right: 99
bitmap_y_offset (195)
    on left: 154 155 156, on right: 99
timespec (196)
    on left: 157 158 159, on right: 31 171 172 173 174 175 176 177
    178 275 276 277 282 283 284 285 286
kd_events (197)
    on left: 160 161, on right: 3 160
kd_event (198)
    on left: 163 165, on right: 160
$@23 (199)
    on left: 162, on right: 163
$@24 (200)
    on left: 164, on right: 165
kd_event_defs (201)
    on left: 166 167, on right: 163 165 166
kd_event_def (202)
    on left: 168 169 170 171 172 173 174 175 176 177 178 179 181 183
    184 186 188 189 190 191 192 193 194 195 196 197 199 200 202 204
    205 206 208 209 211 213 214 215 216, on right: 166
$@25 (203)
    on left: 180, on right: 181
$@26 (204)
    on left: 182, on right: 183
$@27 (205)
    on left: 185, on right: 186
$@28 (206)
    on left: 187, on right: 188
$@29 (207)
    on left: 198, on right: 199
$@30 (208)
    on left: 201, on right: 202
$@31 (209)
    on left: 203, on right: 204
$@32 (210)
    on left: 207, on right: 208
$@33 (211)
    on left: 210, on right: 211
$@34 (212)
    on left: 212, on right: 213
kd_meta_byte_stream_def (213)
    on left: 218, on right: 216
$@35 (214)
    on left: 217, on right: 218
kd_optional_secondary (215)
    on left: 219 220, on right: 184 186 188
strings (216)
    on left: 221 222, on right: 189 190 191 192 197 221
kd_motion_defs (217)
    on left: 223 224, on right: 22 199 223
kd_motion_def (218)
    on left: 225 226 227 228 229, on right: 223
kd_optional_curve_duration (219)
    on left: 230 231 232 233, on right: 228
kd_motion_mapping (220)
    on left: 234 235 236 237 238 239, on right: 225 226 273
kd_motion_semantics (221)
    on left: 240 241 242 243 244 245 246 247 248 249 250 251 252 253
    254 255 256 257 258 259 260 261 262 263 264 265 266 267 268 269,
    on right: 227
kd_simple_timed_glyph_marker_defs (222)
    on left: 270 271, on right: 202 270
kd_simple_timed_glyph_marker_def (223)
    on left: 272 273 274 275 276 277, on right: 270
kd_simple_timed_glyph_style_morph_defs (224)
    on left: 278 279, on right: 204 278
kd_simple_timed_glyph_style_morph_def (225)
    on left: 280 281 282 283 284 285 286, on right: 278
unumber60 (226)
    on left: 288, on right: 157
$@36 (227)
    on left: 287, on right: 288
float60 (228)
    on left: 290, on right: 157 158 159
$@37 (229)
    on left: 289, on right: 290
kd_opt_comma (230)
    on left: 291 292, on right: 117 119 121 123
directionality (231)
    on left: 293 294 295 296, on right: 10 170
kd_font_range_defs (232)
    on left: 297 298, on right: 28 297 307
kd_font_range_def (233)
    on left: 299 300 301 302 303, on right: 297
kd_font_mapping_defs (234)
    on left: 304 305, on right: 30 304
kd_font_mapping_def (235)
    on left: 307 308, on right: 304
$@38 (236)
    on left: 306, on right: 307


State 0

    0 $accept: . kd_kate $end

    $default  reduce using rule 1 ($@1)

    kd_kate  go to state 1
    $@1      go to state 2


State 1

    0 $accept: kd_kate . $end

    $end  shift, and go to state 3


State 2

    3 kd_kate: $@1 . KATE '{' kd_opt_defs $@2 kd_events '}'

    KATE  shift, and go to state 4


State 3

    0 $accept: kd_kate $end .

    $default  accept


State 4

    3 kd_kate: $@1 KATE . '{' kd_opt_defs $@2 kd_events '}'

    '{'  shift, and go to state 5


State 5

    3 kd_kate: $@1 KATE '{' . kd_opt_defs $@2 kd_events '}'

    DEFS  shift, and go to state 6

    $default  reduce using rule 5 (kd_opt_defs)

    kd_opt_defs  go to state 7


State 6

    4 kd_opt_defs: DEFS . '{' kd_defs '}'

    '{'  shift, and go to state 8


State 7

    3 kd_kate: $@1 KATE '{' kd_opt_defs . $@2 kd_events '}'

    $default  reduce using rule 2 ($@2)

    $@2  go to state 9


State 8

    4 kd_opt_defs: DEFS '{' . kd_defs '}'

    $default  reduce using rule 7 (kd_defs)

    kd_defs  go to state 10


State 9

    3 kd_kate: $@1 KATE '{' kd_opt_defs $@2 . kd_events '}'

    $default  reduce using rule 161 (kd_events)

    kd_events  go to state 11


State 10

    4 kd_opt_defs: DEFS '{' kd_defs . '}'
    6 kd_defs: kd_defs . kd_def

    LANGUAGE        shift, and go to state 12
    COMMENT         shift, and go to state 13
    CATEGORY        shift, and go to state 14
    DEFINE          shift, and go to state 15
    TIMEBASE        shift, and go to state 16
    DIRECTIONALITY  shift, and go to state 17
    GRANULE         shift, and go to state 18
    CANVAS          shift, and go to state 19
    '}'             shift, and go to state 20

    kd_def  go to state 21


State 11

    3 kd_kate: $@1 KATE '{' kd_opt_defs $@2 kd_events . '}'
  160 kd_events: kd_events . kd_event

    EVENT  shift, and go to state 22
    '}'    shift, and go to state 23

    kd_event  go to state 24


State 12

    8 kd_def: LANGUAGE . STRING

    STRING  shift, and go to state 25


State 13

   11 kd_def: COMMENT . STRING

    STRING  shift, and go to state 26


State 14

    9 kd_def: CATEGORY . STRING

    STRING  shift, and go to state 27


State 15

   14 kd_def: DEFINE . MACRO $@3 IDENTIFIER $@4 MACRO_BODY
   16       | DEFINE . STYLE kd_opt_name $@5 '{' kd_style_defs '}'
   18       | DEFINE . REGION kd_opt_name $@6 '{' kd_region_defs '}'
   20       | DEFINE . CURVE kd_opt_name $@7 '{' kd_curve_defs '}'
   22       | DEFINE . MOTION kd_opt_name $@8 '{' kd_motion_defs '}'
   24       | DEFINE . PALETTE kd_opt_name $@9 '{' kd_palette_defs '}'
   26       | DEFINE . BITMAP kd_opt_name $@10 '{' kd_bitmap_defs '}'
   28       | DEFINE . FONT RANGE kd_opt_name $@11 '{' kd_font_range_defs '}'
   30       | DEFINE . FONT MAPPING kd_opt_name $@12 '{' kd_font_mapping_defs '}'

    MACRO    shift, and go to state 28
    STYLE    shift, and go to state 29
    REGION   shift, and go to state 30
    CURVE    shift, and go to state 31
    MOTION   shift, and go to state 32
    BITMAP   shift, and go to state 33
    PALETTE  shift, and go to state 34
    FONT     shift, and go to state 35


State 16

   31 kd_def: TIMEBASE . timespec

    NUMBER   shift, and go to state 36
    UNUMBER  shift, and go to state 37
    FLOAT    shift, and go to state 38

    float     go to state 39
    timespec  go to state 40
    float60   go to state 41


State 17

   10 kd_def: DIRECTIONALITY . directionality

    L2R_T2B  shift, and go to state 42
    R2L_T2B  shift, and go to state 43
    T2B_R2L  shift, and go to state 44
    T2B_L2R  shift, and go to state 45

    directionality  go to state 46


State 18

   32 kd_def: GRANULE . RATE UNUMBER '/' UNUMBER
   33       | GRANULE . SHIFT UNUMBER

    RATE   shift, and go to state 47
    SHIFT  shift, and go to state 48


State 19

   34 kd_def: CANVAS . SIZE UNUMBER UNUMBER

    SIZE  shift, and go to state 49


State 20

    4 kd_opt_defs: DEFS '{' kd_defs '}' .

    $default  reduce using rule 4 (kd_opt_defs)


State 21

    6 kd_defs: kd_defs kd_def .

    $default  reduce using rule 6 (kd_defs)


State 22

  163 kd_event: EVENT . $@23 '{' kd_event_defs '}'
  165         | EVENT . $@24 kd_event_defs

    '{'       reduce using rule 162 ($@23)
    $default  reduce using rule 164 ($@24)

    $@23  go to state 50
    $@24  go to state 51


State 23

    3 kd_kate: $@1 KATE '{' kd_opt_defs $@2 kd_events '}' .

    $default  reduce using rule 3 (kd_kate)


State 24

  160 kd_events: kd_events kd_event .

    $default  reduce using rule 160 (kd_events)


State 25

    8 kd_def: LANGUAGE STRING .

    $default  reduce using rule 8 (kd_def)


State 26

   11 kd_def: COMMENT STRING .

    $default  reduce using rule 11 (kd_def)


State 27

    9 kd_def: CATEGORY STRING .

    $default  reduce using rule 9 (kd_def)


State 28

   14 kd_def: DEFINE MACRO . $@3 IDENTIFIER $@4 MACRO_BODY

    $default  reduce using rule 12 ($@3)

    $@3  go to state 52


State 29

   16 kd_def: DEFINE STYLE . kd_opt_name $@5 '{' kd_style_defs '}'

    STRING  shift, and go to state 53

    $default  reduce using rule 126 (kd_opt_name)

    kd_opt_name  go to state 54


State 30

   18 kd_def: DEFINE REGION . kd_opt_name $@6 '{' kd_region_defs '}'

    STRING  shift, and go to state 53

    $default  reduce using rule 126 (kd_opt_name)

    kd_opt_name  go to state 55


State 31

   20 kd_def: DEFINE CURVE . kd_opt_name $@7 '{' kd_curve_defs '}'

    STRING  shift, and go to state 53

    $default  reduce using rule 126 (kd_opt_name)

    kd_opt_name  go to state 56


State 32

   22 kd_def: DEFINE MOTION . kd_opt_name $@8 '{' kd_motion_defs '}'

    STRING  shift, and go to state 53

    $default  reduce using rule 126 (kd_opt_name)

    kd_opt_name  go to state 57


State 33

   26 kd_def: DEFINE BITMAP . kd_opt_name $@10 '{' kd_bitmap_defs '}'

    STRING  shift, and go to state 53

    $default  reduce using rule 126 (kd_opt_name)

    kd_opt_name  go to state 58


State 34

   24 kd_def: DEFINE PALETTE . kd_opt_name $@9 '{' kd_palette_defs '}'

    STRING  shift, and go to state 53

    $default  reduce using rule 126 (kd_opt_name)

    kd_opt_name  go to state 59


State 35

   28 kd_def: DEFINE FONT . RANGE kd_opt_name $@11 '{' kd_font_range_defs '}'
   30       | DEFINE FONT . MAPPING kd_opt_name $@12 '{' kd_font_mapping_defs '}'

    MAPPING  shift, and go to state 60
    RANGE    shift, and go to state 61


State 36

  150 float: NUMBER .

    $default  reduce using rule 150 (float)


State 37

  149 float: UNUMBER .
  157 timespec: UNUMBER . ':' unumber60 ':' float60
  158         | UNUMBER . ':' float60

    ':'  shift, and go to state 62
